--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <script type="module" src="./assets/main/index.js"></script>
-    <title>Document</title>
+    <title>Todo-List</title>
 </head>
 <body>
     
