localStorage et module function.js ajouté

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </div>
         <div class="task">
             <span id="tous" type="button">Tous</span>
+            <span id="a-faire" type="button">A faire</span>
             <span id="task-finished">Taches Finis</span>
         </div>
         <ul id="task-list"></ul>
