--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <add-task></add-task>
         </div>
         <div class="task">
-            <span id="tous" type="button">Tous</span>
-            <span id="a-faire" type="button">A faire</span>
-            <span id="task-finished">Taches Finis</span>
+            <span class="task-menu" id="tous" type="button">Tous</span>
+            <span class="task-menu"id="a-faire" type="button">A faire</span>
+            <span class="task-menu"id="task-finished">Taches Finis</span>
         </div>
         <ul id="task-list"></ul>
     </div>
