--- a/index.html
+++ b/index.html
@@ -22,5 +22,12 @@
             </div>
             <ul id="task-list"></ul>
         </div>
+        <style>
+            select{
+                width: 100%;
+            }
+            
+            
+        </style>
     </body>
 </html>
